--- a/views/hello.handlebars
+++ b/views/hello.handlebars
@@ -21,7 +21,8 @@
 <body>
 	<div class="container">
 		<div class="jumbotron">
-			<h1>Hello, {{name}}!</h1>
+			<h1>Hello, {{nameToShow}}!</h1>
+			<h1>Presenting: {{userName}}</h1>
 		</div>
 	</div>
 
